# mipt-parallel-computing-course-7th-term

./: LICENSE  README.md
task1-openmp-integral/: CMakeLists.txt  Task1  omp-integral  omp-integral.cpp  utils.cpp  utils.h
task2-mpi-heat-equation-2d/: Makefile  computation.h  computation_mpi.cpp  computation_serial.cpp  helloworld.cpp  main.cpp  run_many_times_serial.sh  serial.cpp  utils.h
task3-parallelizing-loops/: Makefile  run_comparizon.sh  run_comparizon_1.sh  task.txt  utils.h
task3-parallelizing-loops/initial_loops/: .1.c.swp  .2.c.swm  .2.c.swn  .2.c.swo  .2.c.swp  .4.c.swp  1.c  2.c  3.c  4.c  5.c  6.c  Makefile
task3-parallelizing-loops/parallel_loops/: .parallel_1.c.swp  .parallel_2.c.swo  .parallel_2.c.swp  .parallel_3.c.swp  .parallel_4.c.swp  .parallel_5.c.swp  1_parallel.out  Makefile  parallel_1.c  parallel_2.c  parallel_3.c  parallel_4.c  parallel_5.c  parallel_6.c  run_parallel_2.sh  run_parallel_5.sh
task3-parallelizing-loops/results/: task_1_speedups_parallel  task_1_times_parallel_12_threads  task_1_times_parallel_16_threads  task_1_times_parallel_1_threads  task_1_times_parallel_20_threads  task_1_times_parallel_2_threads  task_1_times_parallel_3_threads  task_1_times_parallel_4_threads  task_1_times_parallel_6_threads  task_1_times_parallel_8_threads  task_1_times_serial  task_2_speedups_parallel  task_2_times_parallel_12_threads  task_2_times_parallel_16_threads  task_2_times_parallel_1_threads  task_2_times_serial  (+50 more)
task4-boundary-problem-reduction/: Makefile  includes.h  model.c  model.h  parallel-reduction.c  solver.c  solver.h
(+2 files in other folders)
